Revise color palettes for animated background
Updated color palettes for the animated background to focus on pure, high-saturation colors.

--- a/index.html
+++ b/index.html
@@ -131,17 +131,18 @@
         ];
         
         // Array of different color palettes for the animated background
+        // UPDATED: Focused on pure, high-saturation, bright colors
         const GRADIENT_PALETTES = [
-            // Palette 1: Vivid Sunset (Red-Orange, Gold, Blue)
-            'linear-gradient(135deg, #FF5733, #FFC300, #33FF7A, #337AFF, #FF5733)',
-            // Palette 2: Electric Ocean (Bright Blues, Greens, Indigo)
-            'linear-gradient(135deg, #00BFFF, #1E90FF, #3CB371, #4B0082, #00BFFF)',
-            // Palette 3: Neon Galaxy (Electric Purple, Hot Pink, Neon Green)
-            'linear-gradient(135deg, #9D2BFF, #F834D2, #FFD700, #49FB9D, #9D2BFF)',
-            // Palette 4: Tropical Fusion (Hot Pink, Light Salmon, Lime Green, Turquoise)
-            'linear-gradient(135deg, #FF69B4, #FFA07A, #32CD32, #40E0D0, #FF69B4)',
-            // Palette 5: Vibrant Primary (Red, Yellow, Blue, Magenta)
-            'linear-gradient(135deg, #FF0000, #FFFF00, #0000FF, #FF00FF, #FF0000)'
+            // Palette 1: Rainbow Bright (Pure R, Y, G, B)
+            'linear-gradient(135deg, #FF0000, #FFFF00, #00FF00, #00FFFF, #FF0000)',
+            // Palette 2: Electric Candy (Hot Pink, Electric Blue, Lime)
+            'linear-gradient(135deg, #FF00FF, #33CCFF, #99FF00, #FF3366, #FF00FF)',
+            // Palette 3: Citrus Shock (Neon Orange, Yellow, Hot Red)
+            'linear-gradient(135deg, #FF9900, #FFEE00, #FF6600, #FF0000, #FF9900)',
+            // Palette 4: Deep Violets (Ultra Purple, Bright Cyan, Magenta)
+            'linear-gradient(135deg, #A000FF, #00FFFF, #FF00AA, #00AAFF, #A000FF)',
+            // Palette 5: Tropical Punch (Aqua, Lemon, Coral)
+            'linear-gradient(135deg, #00FFCC, #CCFF00, #FF6666, #00CCFF, #00FFCC)'
         ];
 
         // --- GLOBAL STATE VARIABLES ---
